# Spotlauncher

./: README.md
spotlauncher/: Cargo.toml
spotlauncher/src/: main.rs
spotlauncher/src/gui/: mod.rs  results.rs  search.rs  win.rs
spotlauncher/src/keyboard/: keyboard_handler.rs
spotlauncher/src/search/: app_index.rs  file_index.rs  mod.rs
